# aggregate-scores

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  PLAN.md  TASK.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.cursor/plans/: phase_0_+_phase_1_build_d51dd0c4.plan.md
.cursor/rules/: code-design.mdc  comments-and-docstrings.mdc  python-standards.mdc  typescript-standards.mdc
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json
apps/web/: next.config.ts  package.json  tsconfig.json
apps/worker/: pyproject.toml
apps/worker/log/: pytest_configs.json
apps/worker/src/worker/: __init__.py  __main__.py  config.py  contracts.py  handler.py  health.py  keys.py  loop.py  merge.py  models.py  ports.py
apps/worker/src/worker/adapters/: __init__.py  ddb_store.py  s3_store.py  sqs_queue.py
apps/worker/tests/: conftest.py  fakes.py  test_claim.py  test_completion.py  test_handler_leaf.py  test_health.py  test_idempotency.py  test_merge.py
docs/: demo-video-script.md  interview-guide.md
docs/ITD/: itd-decisions.md  itd-template.md
docs/algos/: numerical-accuracy.md
docs/api/: api-contract.md
docs/architecture/: README.md  aggregation.md  database.md  infrastructure.md  job-splitting.md  lifecycle.md  quality-and-ci.md  system-design.md
docs/diagrams/: architecture.md  er-diagram.md  (+2 more)
infra/: package.json
scripts/: dev-down.sh  dev-up.sh  dump-state.sh  emit_local_exports.ts  gen_contracts.py  init-local-resources.sh  seed-generated-job.py  seed-job.sh  tail-worker.sh
(+38 files in other folders)
